[package]
name = "ts-kvstore"
version = "0.1.0"
edition = "2024"
authors = ["Nicholas Cameron <nrc@ncameron.org>"]

[dependencies]

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
too_many_arguments = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_html_tags = "deny"
private_intra_doc_links = "deny"
